add new api keys

--- a/.example.env
+++ b/.example.env
@@ -1,2 +1,4 @@
-URL_AML="https://ussouthcentral.services.azureml.net/workspaces/sdf45464654654xfasdf54sa6fasf"
-API_KEY_AML="sdf45464654654xfasdf54sa6fasf"
+URL_TITANIC_AML="https://ussouthcentral.services.azureml.net/workspaces/sdf45464654654xfasdf54sa6fasf"
+API_KEY_TITANIC_AML="Bearer sdf45464654654xfasdf54sa6fasf"
+URL_CARS_AML="https://ussouthcentral.services.azureml.net/workspaces/sdf45464654654xfa48faaaaaaaaasf"
+API_KEY_CARS_AML="Bearer sdf45464654654xfa48faaaaaaaaasf"
