--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a simple API Rest created with Node.js by the cors problem with Azure ML",
   "main": "index.js",
   "scripts": {
-    "start": "index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": ""
   },
