add new keyword

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [
     "Machine Learning",
     "Azure",
-    "Node.js"
+    "Node.js",
+    "API REST"
   ],
   "author": "Estiven Mayhuay",
   "license": "ISC",
