--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
-    "node-fetch": "2.6.7"
+    "node-fetch": "2.6.7",
+    "pug": "3.0.2"
   }
 }
