add the new credentials by covid

--- a/.example.env
+++ b/.example.env
@@ -2,3 +2,5 @@ URL_TITANIC_AML="https://ussouthcentral.services.azureml.net/workspaces/sdf45464
 API_KEY_TITANIC_AML="Bearer sdf45464654654xfasdf54sa6fasf"
 URL_CARS_AML="https://ussouthcentral.services.azureml.net/workspaces/sdf45464654654xfa48faaaaaaaaasf"
 API_KEY_CARS_AML="Bearer sdf45464654654xfa48faaaaaaaaasf"
+URL_COVID_AML="https://ussouthcentral.services.azureml.net/workspaces/446ceb25bd7c47a3915cb4d8e9a53779/services"
+API_KEY_COVID_AML="Bearer p3wyiAcFrI48pZPEligYWw5qfb0eT"
